# california_housing_optuna

./: Conclusiones.md  README.md  pyproject.toml
california_housing_optuna/: main.py
mlruns/0/: meta.yaml
mlruns/970324975762069047/: meta.yaml
mlruns/970324975762069047/ae1b0cd734e44409aa3334abaf9fe83d/: meta.yaml
mlruns/970324975762069047/ae1b0cd734e44409aa3334abaf9fe83d/artifacts/model/: MLmodel  conda.yaml  model.xgb  requirements.txt
mlruns/970324975762069047/ae1b0cd734e44409aa3334abaf9fe83d/metrics/: R2_Test  RMSE_Test  RMSE_Train
mlruns/970324975762069047/ae1b0cd734e44409aa3334abaf9fe83d/params/: reg_alpha  reg_lambda
mlruns/970324975762069047/ae1b0cd734e44409aa3334abaf9fe83d/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
