[tool.poetry]
name = "california-housing-optuna"
version = "0.1.0"
description = ""
authors = ["marianaph6 <mariana1996.mph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
optuna = "^4.1.0"
xgboost = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
